Fix sidebar - recent posts title and date spacing

--- a/wp-content/themes/the-child-theme/assets/css/stiliai.css
+++ b/wp-content/themes/the-child-theme/assets/css/stiliai.css
@@ -402,6 +402,9 @@ h4 {
 body.single-naujiena .naujiena .thumbnail {
     margin-bottom: 3rem;
 }
+body.single-naujiena .naujiena .row > div:first-child {
+    padding-bottom: 3rem;
+}
 
 /*
     Media Queries
@@ -554,11 +557,23 @@ body.single-naujiena .naujiena .thumbnail {
     }
     #main #right-sidebar ul.oceanwp-recent-posts li {
         flex-direction: row;
-        align-items: flex-start;
+        align-items: stretch;
+    }
+    #main #right-sidebar ul.oceanwp-recent-posts li .recent-posts-details,
+    #main #right-sidebar ul.oceanwp-recent-posts li .recent-posts-details-inner {
+        display: flex;
+    }
+    #main #right-sidebar ul.oceanwp-recent-posts li .recent-posts-details-inner {
+        flex-direction: column;
+    }
+    #main #right-sidebar ul.oceanwp-recent-posts li .recent-posts-details-inner .recent-posts-title {
+        flex-grow: 1;
+        line-height: 1.3;
     }
     #main #right-sidebar ul.oceanwp-recent-posts li a.recent-posts-thumbnail {
         width: 20%;
         margin-right: 1rem;
+        margin-bottom: 0;
     }
     #main #right-sidebar ul.oceanwp-recent-posts li a.recent-posts-title {
         font-size: 1.2rem;
@@ -659,6 +674,13 @@ body.single-naujiena .naujiena .thumbnail {
     }
 }
 
+@media screen and (max-width: 1400px) {
+    .main-content-group-block {
+        padding: 0 30px;
+    }
+
+}
+
 .renginiai-accordion .accordion-button {
     font-size: 14px;
 }
@@ -756,13 +778,6 @@ body.single-naujiena .naujiena .thumbnail {
 .main-content-group-block>* {
     width: 100%;
     max-width: 1400px !important;
-}
-
-@media screen and (max-width: 1400px) {
-    .main-content-group-block {
-        padding: 0 30px;
-    }
-
 }
 
 .main-content-group-block .main-columns-block {
